--- a/scss/global-variables.scss
+++ b/scss/global-variables.scss
@@ -1,6 +1,7 @@
 $blue: #034694;
 $white: #fff;
 $bg: #e5e5e5;
+$header-bg: rgba(3, 70, 148, 0.75);
 
 $font: "Montserrat", sans-serif;
 $font-size: 24px;
